--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [project]
 name = "frappe_better_select_control"
-version = "1.1.2"
 authors = [
     {name = "Ameen Ahmed (Level Up)", email = "kid1194@gmail.com"}
 ]
 description = "Frappe select control that supports options group."
 requires-python = ">=3.6"
 readme = "README.md"
+dynamic = ["version"]
 dependencies = [
-    "frappe >=13.0.0"
+    "frappe~=13.0.0"
 ]
 
 [project.urls]
